src/test/deca/syntax/valid/15or.deca
{
    int x = 3;
    int y = 4;
    if (x == 4 || y == 4) {
        println("OK");
    } else {
        println("KO");
    }
}