src/test/deca/syntax/invalid/Objets/00This.deca
class A {
    int x = -4 ;
    int y = 3;
    int z = 2*7-1;

    float a = 0;
    float b = 13.02;
    float c = this.a ;
}

{
    A a = new A() ;
    println(a.x);
    println(a.y + a.x);
    println(a.z);

    println(this.a);
}
